src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>acfApplication_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfComparison_Rate__c</fullName>
        <description>Click Loans</description>
        <label>Comparison Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfLegal_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Legal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfLoan_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Click Loans</description>
        <label>Loan Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfOngoing_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Ongoing Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfOppLIComparison_Rate__c</fullName>
        <description>Click Loans</description>
        <formula>Opportunity.acfProduct_LVR__r.ACF_Comparison_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comparison Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfRate__c</fullName>
        <description>Click Loans</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfTotal_Fee__c</fullName>
        <description>Click Loans</description>
        <formula>acfApplication_Fee__c +  acfValuation_Fee__c +  acfLegal_Fees__c +  acfOngoing_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfValuation_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Valuation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickEstablishment_Fee__c</fullName>
        <label>Establishment Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickMonthly_Fees__c</fullName>
        <label>Monthly Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickMortgage_Risk_Fee__c</fullName>
        <label>Mortgage Risk Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickTitle_Protection_Fee__c</fullName>
        <label>Title Protection Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickTotal_Upfront_Fee__c</fullName>
        <label>Total Upfront Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>